Version 1.4 New sleep overlay and full servers support Sleep Tracker bug fix